# ChangeLog for sys-fs/udev
# Copyright 1999-2010 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/sys-fs/udev/ChangeLog,v 1.536 2010/04/20 02:53:14 robbat2 Exp $

*udev-146-r3 (20 Apr 2010)

  20 Apr 2010; Robin H. Johnson <robbat2@gentoo.org> +udev-146-r3.ebuild:
  Alpha cannot use the 151-r2 version due to non-availability of newer
  kernels, so provide an older ebuild with static libraries for lvm2
  bumping.

*udev-151-r2 (19 Apr 2010)

  19 Apr 2010; Robin H. Johnson <robbat2@gentoo.org> +udev-151-r2.ebuild:
  Build static libraries as well, for lvm2 to use when building static
  versions for early boot purposes.

  19 Apr 2010; Matthias Schwarzott <zzam@gentoo.org> files/151/udev.initd,
  udev-9999.ebuild:
  Add keywords nolxc and noopenvz to udev init-script, Bug #310427.

  16 Apr 2010; Brent Baude <ranger@gentoo.org> udev-149.ebuild:
  Marking udev-149 ppc for bug 303031

  05 Apr 2010; Jeroen Roovers <jer@gentoo.org> udev-149.ebuild:
  Back to ~hppa (bug #294470).

  22 Mar 2010; Brent Baude <ranger@gentoo.org> udev-149.ebuild:
  Marking udev-149 ppc64 for bug 303031

  15 Mar 2010; Matthias Schwarzott <zzam@gentoo.org> udev-145.ebuild,
  udev-145-r1.ebuild, udev-145-r2.ebuild, udev-145-r3.ebuild,
  udev-146.ebuild, udev-146-r1.ebuild, udev-146-r2.ebuild,
  udev-147-r1.ebuild, udev-149.ebuild, udev-150-r1.ebuild,
  udev-151-r1.ebuild, udev-9999.ebuild:
  Fix tests for udev-149 and udev-151-r1, thanks to Myckel Habets for
  looking into it, Bug #295958. Restrict test for the other ebuilds.

  07 Mar 2010; Markus Meier <maekke@gentoo.org> udev-149.ebuild:
  amd64/arm stable, bug #303031

  02 Mar 2010; Jeroen Roovers <jer@gentoo.org> udev-149.ebuild:
  Stable for HPPA (bug #303031).

  21 Feb 2010; Christian Faulhammer <fauli@gentoo.org> udev-149.ebuild:
  stable x86, bug 303031

  07 Feb 2010; Matthias Schwarzott <zzam@gentoo.org> udev-141-r1.ebuild,
  udev-145.ebuild, udev-145-r1.ebuild, udev-145-r2.ebuild,