@@ -1,6 +1,12 @@
 # ChangeLog for sys-fs/udev
 # Copyright 1999-2010 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/sys-fs/udev/ChangeLog,v 1.536 2010/04/20 02:53:14 robbat2 Exp $
+# $Header: /var/cvsroot/gentoo-x86/sys-fs/udev/ChangeLog,v 1.537 2010/05/02 17:40:12 zzam Exp $
+
+*udev-151-r3 (02 May 2010)
+
+  02 May 2010; Matthias Schwarzott <zzam@gentoo.org> +udev-151-r3.ebuild:
+  Disable devfs-compat and old-hd-rules use flags by default they will be
+  removed on next udev update.
 
 *udev-146-r3 (20 Apr 2010)
 
